Switched to multi-part based upload API
